--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "react": "^19.2.4",
-    "lucide-react": "^0.564.0",
+    "react-dom": "^19.2.4",
+    "lucide-react": "^0.475.0",
     "recharts": "^3.7.0",
-    "@google/genai": "^1.41.0",
-    "react-dom": "^19.2.4"
+    "@google/genai": "^1.41.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
